--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2136,7 +2136,7 @@ selectorAffix.a = "doubleStorey"
 selectorAffix."ae/a" = "doubleStorey"
 selectorAffix."a/sansSerif" = "doubleStorey"
 selectorAffix."a/rtailBase" = "doubleStorey"
-selectorAffix."a/turnABase" = "doubleStorey"
+selectorAffix."a/doubleStorey" = "doubleStorey"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "singleStorey"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "singleStorey"
 selectorAffix."aScript/autoSerifed/slab" = "singleStorey"
@@ -2150,7 +2150,7 @@ selectorAffix.a = "singleStorey"
 selectorAffix."ae/a" = "doubleStorey"
 selectorAffix."a/sansSerif" = "singleStorey"
 selectorAffix."a/rtailBase" = "singleStorey"
-selectorAffix."a/turnABase" = "doubleStorey"
+selectorAffix."a/doubleStorey" = "doubleStorey"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "singleStorey"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "singleStorey"
 selectorAffix."aScript/autoSerifed/slab" = "singleStorey"
@@ -2167,7 +2167,7 @@ selectorAffix.a = ""
 selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = ""
 selectorAffix."a/rtailBase" = ""
-selectorAffix."a/turnABase" = ""
+selectorAffix."a/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = ""
 selectorAffix."a/singleStorey/autoSerifed/sans" = ""
 selectorAffix."aScript/autoSerifed/slab" = ""
@@ -2181,7 +2181,7 @@ selectorAffix.a = "hookInwardSerifed"
 selectorAffix."ae/a" = "hookInwardSerifed"
 selectorAffix."a/sansSerif" = ""
 selectorAffix."a/rtailBase" = "hookInwardSerifed"
-selectorAffix."a/turnABase" = "hookInwardSerifed"
+selectorAffix."a/doubleStorey" = "hookInwardSerifed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = ""
 selectorAffix."a/singleStorey/autoSerifed/sans" = ""
 selectorAffix."aScript/autoSerifed/slab" = ""
@@ -2197,7 +2197,7 @@ selectorAffix.a = ""
 selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = ""
 selectorAffix."a/rtailBase" = ""
-selectorAffix."a/turnABase" = ""
+selectorAffix."a/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = ""
 selectorAffix."a/singleStorey/autoSerifed/sans" = ""
 selectorAffix."aScript/autoSerifed/slab" = ""
@@ -2210,7 +2210,7 @@ selectorAffix.a = "earlessCorner"
 selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = "earlessCorner"
 selectorAffix."a/rtailBase" = "earlessCorner"
-selectorAffix."a/turnABase" = ""
+selectorAffix."a/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = "earlessCorner"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "earlessCorner"
 selectorAffix."aScript/autoSerifed/slab" = ""
@@ -2223,7 +2223,7 @@ selectorAffix.a = "earlessRounded"
 selectorAffix."ae/a" = ""
 selectorAffix."a/sansSerif" = "earlessRounded"
 selectorAffix."a/rtailBase" = "earlessRounded"
-selectorAffix."a/turnABase" = ""
+selectorAffix."a/doubleStorey" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = "earlessRounded"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "earlessRounded"
 selectorAffix."aScript/autoSerifed/slab" = ""
@@ -2237,7 +2237,7 @@ selectorAffix.a = "serifless"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "serifless"
 selectorAffix."a/rtailBase" = "serifless"
-selectorAffix."a/turnABase" = "serifless"
+selectorAffix."a/doubleStorey" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifless"
 selectorAffix."aScript/autoSerifed/slab" = "serifless"
@@ -2250,7 +2250,7 @@ selectorAffix.a = "serifed"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "serifless"
 selectorAffix."a/rtailBase" = "serifless"
-selectorAffix."a/turnABase" = "serifed"
+selectorAffix."a/doubleStorey" = "serifed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "doubleSerifed", else = "serifed" }
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifed"
 selectorAffix."aScript/autoSerifed/slab" = "serifed"
@@ -2264,7 +2264,7 @@ selectorAffix.a = "doubleSerifed"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "serifless"
 selectorAffix."a/rtailBase" = "topSerifed"
-selectorAffix."a/turnABase" = "serifed"
+selectorAffix."a/doubleStorey" = "serifed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "doubleSerifed"
 selectorAffix."aScript/autoSerifed/slab" = "serifed"
@@ -2277,7 +2277,7 @@ selectorAffix.a = "tailed"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "tailed"
 selectorAffix."a/rtailBase" = "serifless"
-selectorAffix."a/turnABase" = "tailed"
+selectorAffix."a/doubleStorey" = "tailed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "tailedSerifed", else = "tailed" }
 selectorAffix."a/singleStorey/autoSerifed/sans" = "tailed"
 selectorAffix."aScript/autoSerifed/slab" = "tailed"
@@ -2291,7 +2291,7 @@ selectorAffix.a = "tailedSerifed"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "tailed"
 selectorAffix."a/rtailBase" = "topSerifed"
-selectorAffix."a/turnABase" = "tailed"
+selectorAffix."a/doubleStorey" = "tailed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "tailedSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "tailedSerifed"
 selectorAffix."aScript/autoSerifed/slab" = "tailed"
@@ -2305,7 +2305,7 @@ selectorAffix.a = "toothlessCorner"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "toothlessCorner"
 selectorAffix."a/rtailBase" = "serifless"
-selectorAffix."a/turnABase" = "toothlessCorner"
+selectorAffix."a/doubleStorey" = "toothlessCorner"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifless"
 selectorAffix."aScript/autoSerifed/slab" = "serifed"
@@ -2319,7 +2319,7 @@ selectorAffix.a = "toothlessRounded"
 selectorAffix."ae/a" = "serifless"
 selectorAffix."a/sansSerif" = "toothlessRounded"
 selectorAffix."a/rtailBase" = "serifless"
-selectorAffix."a/turnABase" = "toothlessRounded"
+selectorAffix."a/doubleStorey" = "toothlessRounded"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifless"
 selectorAffix."aScript/autoSerifed/slab" = "serifed"
