--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@iosevka/monorepo",
   "version": "32.0.2",
-  "workspaces": [
-    "packages/*",
-    "tools/*"
-  ],
+  "workspaces": ["packages/*", "tools/*"],
   "scripts": {
     "build": "verda -f verdafile.mjs",
     "bump-ver": "node tools/misc/src/update-package-json-version.mjs && npm install && node tools/misc/src/generate-ttfa-ranges.mjs",
@@ -19,7 +16,7 @@
     "otb-ttc-bundle": "^1.7.4",
     "semver": "^7.6.3",
     "uuid": "^11.0.2",
-    "verda": "^1.12.2",
+    "verda": "^1.12.3",
     "which": "^5.0.0"
   },
   "devDependencies": {
