--- a/params/variants.toml
+++ b/params/variants.toml
@@ -8410,6 +8410,12 @@ description = "Lower pilcrow sign `¶`"
 selector.pilcrow = "low"
 selector.revPilcrow = "low"
 
+[prime.pilcrow.variants.curved]
+rank = 3
+description = "Curved pilcrow sign `¶`"
+selector.pilcrow = "curved"
+selector.revPilcrow = "curved"
+
 
 
 [prime.partial-derivative]
@@ -9232,6 +9238,7 @@ at = "fourfold"
 dollar = "slanted-through"
 cent = "slanted-through-cap"
 percent = "rings-continuous-slash"
+pilcrow = "curved"
 question = "corner-flat-hooked"
 micro-sign = "tailed-serifless"
 
