--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1199,6 +1199,7 @@ description = "Serifless `L`"
 selector.L = "serifless"
 selector."L/sansSerif" = "serifless"
 selector."currency/sterlingSign" = "serifless"
+selector."currency/turkishLiraSign" = "serifless"
 
 [prime.capital-l.variants.motion-serifed]
 rank = 2
@@ -1206,6 +1207,7 @@ description = "Standard `L` with motion serif at bottom right"
 selector.L = "motionSerifed"
 selector."L/sansSerif" = "serifless"
 selector."currency/sterlingSign" = "motionSerifed"
+selector."currency/turkishLiraSign" = "serifless"
 
 [prime.capital-l.variants.serifed]
 rank = 3
@@ -1213,6 +1215,7 @@ description = "`L` with serifs"
 selector.L = "serifed"
 selector."L/sansSerif" = "serifless"
 selector."currency/sterlingSign" = "motionSerifed"
+selector."currency/turkishLiraSign" = "serifed"
 
 
 
