Make `ɶ`/`ᴁ`/`ᴡ`/`℡`/`℻` slightly wider under Quasi-Proportional.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -774,6 +774,7 @@ descriptionAffix = "standard shape"
 selectorAffix.D = "standard"
 selectorAffix."D/sansSerif" = "standard"
 selectorAffix.Dhookleft = "standard"
+selectorAffix.smcpD = "moreRounded"
 
 [prime.capital-d.variants-buildup.stages.body.more-rounded]
 rank = 2
@@ -781,6 +782,7 @@ descriptionAffix = "more rounded shape"
 selectorAffix.D = "moreRounded"
 selectorAffix."D/sansSerif" = "moreRounded"
 selectorAffix.Dhookleft = "moreRounded"
+selectorAffix.smcpD = "moreRounded"
 
 [prime.capital-d.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -789,6 +791,7 @@ descriptionJoiner = "without"
 selectorAffix.D = "serifless"
 selectorAffix."D/sansSerif" = "serifless"
 selectorAffix.Dhookleft = "serifless"
+selectorAffix.smcpD = "serifless"
 
 [prime.capital-d.variants-buildup.stages.serifs.unilateral-serifed]
 rank = 2
@@ -796,6 +799,7 @@ descriptionAffix = "serifs at top"
 selectorAffix.D = "unilateralSerifed"
 selectorAffix."D/sansSerif" = "serifless"
 selectorAffix.Dhookleft = "serifless"
+selectorAffix.smcpD = "unilateralSerifed"
 
 [prime.capital-d.variants-buildup.stages.serifs.bilateral-serifed]
 rank = 3
@@ -803,6 +807,7 @@ descriptionAffix = "serifs at both top and bottom"
 selectorAffix.D = "bilateralSerifed"
 selectorAffix."D/sansSerif" = "serifless"
 selectorAffix.Dhookleft = "bilateralSerifed"
+selectorAffix.smcpD = "bilateralSerifed"
 
 
 
