Change default to medium

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -8904,7 +8904,7 @@ question = "smooth"
 pilcrow = "high"
 partial-derivative = "curly-bar"
 micro-sign = "toothed-serifless"
-decorative-angle-brackets = "tall"
+decorative-angle-brackets = "medium"
 lig-ltgteq = "flat"
 lig-neq = "slightly-slanted"
 lig-equal-chain = "with-notch"
