--- a/params/variants.toml
+++ b/params/variants.toml
@@ -8569,7 +8569,7 @@ selector."decorativeAngleBracket" = "tall"
 [prime.decorative-angle-brackets.variants.middle]
 rank = 2
 description = "Middle-height decorative angle brackets"
-selector."decorativeAngleBracket" = "medium"
+selector."decorativeAngleBracket" = "middle"
 
 [prime.decorative-angle-brackets.variants.short]
 rank = 3
@@ -8904,7 +8904,7 @@ question = "smooth"
 pilcrow = "high"
 partial-derivative = "curly-bar"
 micro-sign = "toothed-serifless"
-decorative-angle-brackets = "medium"
+decorative-angle-brackets = "middle"
 lig-ltgteq = "flat"
 lig-neq = "slightly-slanted"
 lig-equal-chain = "with-notch"
