Add variant selector for decorative angle brackets (U+276C...U+2771) (#2603, #2623) (#2648)

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -8556,6 +8556,28 @@ selectorAffix."micro" = "serifed"
 
 
 
+[prime.decorative-angle-brackets]
+sampler = "❮ ❯"
+samplerExplain = "Decorative angle brackets (U+276C...U+2771)"
+tagKind = "symbol"
+
+[prime.decorative-angle-brackets.variants.tall]
+rank = 1
+description = "Tall decorative angle brackets, sharing same height as conventional brackets"
+selector."decorativeAngleBracket" = "tall"
+
+[prime.decorative-angle-brackets.variants.middle]
+rank = 2
+description = "Middle-height decorative angle brackets"
+selector."decorativeAngleBracket" = "middle"
+
+[prime.decorative-angle-brackets.variants.short]
+rank = 3
+description = "Short decorative angle brackets, sharing same height as guillemts"
+selector."decorativeAngleBracket" = "short"
+
+
+
 [prime.lig-ltgteq]
 sampler = "<= >="
 samplerExplain = "Less-equal and Greater-equal ligations"
@@ -8882,6 +8904,7 @@ question = "smooth"
 pilcrow = "high"
 partial-derivative = "curly-bar"
 micro-sign = "toothed-serifless"
+decorative-angle-brackets = "middle"
 lig-ltgteq = "flat"
 lig-neq = "slightly-slanted"
 lig-equal-chain = "with-notch"
