Make space width a seperate param with metric override field

--- a/params/parameters.toml
+++ b/params/parameters.toml
@@ -84,6 +84,7 @@ advanceScaleT  = 1 # T-like letters
 advanceScaleF  = 1 # f-like letters
 advanceScaleI  = 1 # i-like letters (with serifs/tails)
 advanceScaleII = 1 # Extra-narrow letters (like i without serifs/tails)
+advanceScaleSp = 1 # Whitespace characters
 
 # OS/2 and POST fixed metrics
 
@@ -139,6 +140,7 @@ advanceScaleT  = 1.1666666666666 # 7/6
 advanceScaleF  = 0.8333333333333 # 5/6
 advanceScaleI  = 0.6666666666666 # 4/6
 advanceScaleII = 0.5             # 3/6
+advanceScaleSp = 0.5555555555555 # 5/9
 
 [spacing-quasi-proportional-extension-only]
 spacing = 3
@@ -149,6 +151,7 @@ advanceScaleT  = 1.1666666666666 # 7/6
 advanceScaleF  = 1.00
 advanceScaleI  = 1.00
 advanceScaleII = 1.00
+advanceScaleSp = 1.00
 
 ###### Slopes
 [slope-italic]
