Optimize serifs of `Ꜷ`/`ꜷ`/`խ` under monospace.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1655,32 +1655,28 @@ rank = 1
 descriptionAffix = "toothed shape"
 selectorAffix.U = "toothed"
 selectorAffix."U/sansSerif" = "toothed"
-selectorAffix."AU/U/full" = "toothed"
-selectorAffix."AU/U/reduced" = "toothed"
+selectorAffix."AU/U" = "toothed"
 
 [prime.capital-u.variants-buildup.stages.body.tailed]
 rank = 2
 descriptionAffix = "tailed shape"
 selectorAffix.U = "tailed"
 selectorAffix."U/sansSerif" = "tailed"
-selectorAffix."AU/U/full" = "tailed"
-selectorAffix."AU/U/reduced" = "tailed"
+selectorAffix."AU/U" = "tailed"
 
 [prime.capital-u.variants-buildup.stages.body.toothless-corner]
 rank = 3
 descriptionAffix = "toothless (corner bottom-right) shape"
 selectorAffix.U = "toothlessCorner"
 selectorAffix."U/sansSerif" = "toothlessCorner"
-selectorAffix."AU/U/full" = "toothlessCorner"
-selectorAffix."AU/U/reduced" = "toothlessCorner"
+selectorAffix."AU/U" = "toothlessCorner"
 
 [prime.capital-u.variants-buildup.stages.body.toothless-rounded]
 rank = 4
 descriptionAffix = "toothless (rounded) shape"
 selectorAffix.U = "toothlessRounded"
 selectorAffix."U/sansSerif" = "toothlessRounded"
-selectorAffix."AU/U/full" = "toothlessRounded"
-selectorAffix."AU/U/reduced" = "toothlessRounded"
+selectorAffix."AU/U" = "toothlessRounded"
 
 [prime.capital-u.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -1688,8 +1684,7 @@ descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.U = "serifless"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/U/full" = "serifless"
-selectorAffix."AU/U/reduced" = "serifless"
+selectorAffix."AU/U" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.bottom-right-serifed]
 rank = 2
@@ -1697,8 +1692,7 @@ disableIf = [{ body = "NOT toothed" }]
 descriptionAffix = "serif at bottom-right"
 selectorAffix.U = "bottomRightSerifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/U/full" = "bottomRightSerifed"
-selectorAffix."AU/U/reduced" = "bottomRightSerifed"
+selectorAffix."AU/U" = "bottomRightSerifed"
 
 [prime.capital-u.variants-buildup.stages.serifs.motion-serifed]
 rank = 3
@@ -1706,8 +1700,7 @@ disableIf = [{ body = "toothless-corner" }, { body = "toothless-rounded" }]
 descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix.U = "unilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/U/full" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = "serifless" }
-selectorAffix."AU/U/reduced" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = "serifless" }
+selectorAffix."AU/U" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = "serifless" }
 
 [prime.capital-u.variants-buildup.stages.serifs.unilateral-motion-serifed]
 rank = 4
@@ -1715,8 +1708,7 @@ disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at left side"
 selectorAffix.U = "unilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/U/full" = "serifless"
-selectorAffix."AU/U/reduced" = "serifless"
+selectorAffix."AU/U" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.bilateral-motion-serifed]
 rank = 5
@@ -1724,16 +1716,14 @@ disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at both sides"
 selectorAffix.U = "bilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/U/full" = "bilateralMotionSerifed"
-selectorAffix."AU/U/reduced" = "bilateralMotionSerifed"
+selectorAffix."AU/U" = "bilateralMotionSerifed"
 
 [prime.capital-u.variants-buildup.stages.serifs.serifed]
 rank = 6
 descriptionAffix = "serifs"
 selectorAffix.U = "serifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/U/full" = "serifed"
-selectorAffix."AU/U/reduced" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = { if = [{ body = "tailed" }], then = "serifless", else = "bilateralMotionSerifed" } }
+selectorAffix."AU/U" = "serifed"
 
 
 
@@ -4446,8 +4436,7 @@ selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
 selectorAffix."ue/u" = "toothed"
-selectorAffix."au/u/full" = "toothed"
-selectorAffix."au/u/reduced" = "toothed"
+selectorAffix."au/u" = "toothed"
 
 [prime.u.variants-buildup.stages.body.tailed]
 rank = 2
@@ -4474,8 +4463,7 @@ selectorAffix."cyrl/dzhe.italic" = "tailed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "tailed"
 selectorAffix."ue/u" = "toothed"
-selectorAffix."au/u/full" = "tailed"
-selectorAffix."au/u/reduced" = "tailed"
+selectorAffix."au/u" = "tailed"
 
 [prime.u.variants-buildup.stages.body.toothless-corner]
 rank = 3
@@ -4502,8 +4490,7 @@ selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
 selectorAffix."ue/u" = "toothed"
-selectorAffix."au/u/full" = "toothlessCorner"
-selectorAffix."au/u/reduced" = "toothlessCorner"
+selectorAffix."au/u" = "toothlessCorner"
 
 [prime.u.variants-buildup.stages.body.toothless-rounded]
 rank = 4
@@ -4530,8 +4517,7 @@ selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
 selectorAffix."ue/u" = "toothed"
-selectorAffix."au/u/full" = "toothlessRounded"
-selectorAffix."au/u/reduced" = "toothlessRounded"
+selectorAffix."au/u" = "toothlessRounded"
 
 [prime.u.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -4559,8 +4545,7 @@ selectorAffix."cyrl/dzhe.italic" = "serifless"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."cyrl/tseRev.italic" = "serifless"
 selectorAffix."ue/u" = "serifless"
-selectorAffix."au/u/full" = "serifless"
-selectorAffix."au/u/reduced" = "serifless"
+selectorAffix."au/u" = "serifless"
 
 [prime.u.variants-buildup.stages.serifs.bottom-right-serifed]
 rank = 2
@@ -4588,8 +4573,7 @@ selectorAffix."cyrl/dzhe.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."cyrl/tseRev.italic" = "bottomRightSerifed"
 selectorAffix."ue/u" = "serifless"
-selectorAffix."au/u/full" = "bottomRightSerifed"
-selectorAffix."au/u/reduced" = "bottomRightSerifed"
+selectorAffix."au/u" = "bottomRightSerifed"
 
 [prime.u.variants-buildup.stages.serifs.motion-serifed]
 rank = 3
@@ -4616,8 +4600,7 @@ selectorAffix."cyrl/dzhe.italic" = "motionSerifed"
 selectorAffix."cyrl/tse.italic" = "motionSerifed"
 selectorAffix."cyrl/tseRev.italic" = "motionSerifed"
 selectorAffix."ue/u" = "serifed"
-selectorAffix."au/u/full" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
-selectorAffix."au/u/reduced" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
+selectorAffix."au/u" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 
 [prime.u.variants-buildup.stages.serifs.serifed]
 rank = 4
@@ -4644,8 +4627,7 @@ selectorAffix."cyrl/dzhe.italic" = "serifed"
 selectorAffix."cyrl/tse.italic" = "serifed"
 selectorAffix."cyrl/tseRev.italic" = "serifed"
 selectorAffix."ue/u" = "serifed"
-selectorAffix."au/u/full" = "serifed"
-selectorAffix."au/u/reduced" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
+selectorAffix."au/u" = "serifed"
 
 
 
