Add symmetric/asymmetric variants for Capital Thorn.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -5373,7 +5373,7 @@ selectorAffix.eszet = "tailed"
 
 [prime.eszet.variants-buildup.stages.serifs.serifless]
 rank = 1
-desceiptioAffix = "serifs"
+descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.eszet = "serifless"
 
@@ -5430,26 +5430,56 @@ selector."eth" = "curly-bar"
 
 [prime.capital-thorn]
 sampler = "Þ"
-samplerExplain = "Capital Thorn (`Þ`)"
+samplerExplain = "Capital Thorn"
 tagKind = "letter"
 
-[prime.capital-thorn.variants.serifless]
+[prime.capital-thorn.variants-buildup]
+entry = "symmetry"
+descriptionLeader = "Capital Thorn (`Þ`)"
+
+[prime.capital-thorn.variants-buildup.stages.symmetry."*"]
+next = "serifs"
+
+[prime.capital-thorn.variants-buildup.stages.symmetry.symmetric]
 rank = 1
-description = "Capital Thorn (`Þ`) without serifs"
-selector.Thorn = "serifless"
-selector.Wynn = "serifless"
+keyAffix = ""
+selectorAffix.Thorn = ""
+selectorAffix.ThornStroke = ""
+selectorAffix.ThornStrokeBottom = "asymmetric"
+selectorAffix.Wynn = ""
 
-[prime.capital-thorn.variants.motion-serifed]
+[prime.capital-thorn.variants-buildup.stages.symmetry.asymmetric]
 rank = 2
-description = "Capital Thorn (`Þ`) with motion serifs"
-selector.Thorn = "motionSerifed"
-selector.Wynn = "motionSerifed"
+descriptionAffix = "asymmetric shape"
+selectorAffix.Thorn = "asymmetric"
+selectorAffix.ThornStroke = ""
+selectorAffix.ThornStrokeBottom = "asymmetric"
+selectorAffix.Wynn = ""
 
-[prime.capital-thorn.variants.serifed]
+[prime.capital-thorn.variants-buildup.stages.serifs.serifless]
+rank = 1
+descriptionAffix = "serifs"
+descriptionJoiner = "without"
+selectorAffix.Thorn = "serifless"
+selectorAffix.ThornStroke = "serifless"
+selectorAffix.ThornStrokeBottom = "serifless"
+selectorAffix.Wynn = "serifless"
+
+[prime.capital-thorn.variants-buildup.stages.serifs.motion-serifed]
+rank = 2
+descriptionAffix = "motion serifs"
+selectorAffix.Thorn = "motionSerifed"
+selectorAffix.ThornStroke = "motionSerifed"
+selectorAffix.ThornStrokeBottom = "motionSerifed"
+selectorAffix.Wynn = "motionSerifed"
+
+[prime.capital-thorn.variants-buildup.stages.serifs.serifed]
 rank = 3
-description = "Capital Thorn (`Þ`) with serifs"
-selector.Thorn = "serifed"
-selector.Wynn = "serifed"
+descriptionAffix = "serifs"
+selectorAffix.Thorn = "serifed"
+selectorAffix.ThornStroke = "serifed"
+selectorAffix.ThornStrokeBottom = "serifed"
+selectorAffix.Wynn = "serifed"
 
 
 
@@ -10687,6 +10717,7 @@ y = "straight-turn-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-middle-serifed"
 eszet = "longs-s-lig-middle-serifed"
+capital-thorn = "asymmetric-serifless"
 lower-thorn = "motion-serifed"
 capital-gamma = "serifed"
 lower-iota = "serifed-semi-tailed"
@@ -10748,6 +10779,7 @@ z = "straight-serifed"
 capital-eszet = "rounded-serifed"
 long-s = "bent-hook-double-serifed"
 eszet = "longs-s-lig-dual-serifed"
+capital-thorn = "asymmetric-serifed"
 lower-thorn = "serifed"
 lower-mu = "toothed-serifed"
 cyrl-a = "double-storey-hook-inward-serifed-serifed"
