--- a/params/variants.toml
+++ b/params/variants.toml
@@ -5722,6 +5722,28 @@ selector."grek/delta" = "flatTop"
 
 
 
+[prime.lower-theta]
+sampler = "θ"
+samplerExplain = "Greek lower Theta"
+tagKind = "letter"
+
+[prime.lower-theta.variants.capsule]
+rank = 1
+description = "Greek lower Theta (`θ`) with a capsule (O-like) body shape"
+selector."grek/theta" = "capsule"
+
+[prime.lower-theta.variants.oval]
+rank = 2
+description = "Greek lower Theta (`θ`) with a standard (oval) body shape"
+selector."grek/theta" = "oval"
+
+[prime.lower-theta.variants.diamond]
+rank = 3
+description = "Greek lower Theta (`θ`) with a diamond body shape"
+selector."grek/theta" = "diamond"
+
+
+
 [prime.lower-iota]
 sampler = "ι"
 samplerExplain = "Greek lower Iota"
@@ -8490,6 +8512,11 @@ rank = 2
 description = "The upper bar of the partial derivative symbol is curly"
 selector."partial" = "curly-bar"
 
+[prime.partial-derivative.variants.closed-contour]
+rank = 3
+description = "The upper part of the partial derivative symbol is a full hook"
+selector."partial" = "closed-contour"
+
 
 
 [prime.micro-sign]
@@ -8821,6 +8848,7 @@ capital-gamma = "serifless"
 lower-gamma = "casual"
 capital-delta = "straight"
 lower-delta = "rounded"
+lower-theta = "oval"
 lower-iota = "serifed-semi-tailed"
 capital-lambda = "straight-serifless"
 lower-lambda = "straight"
