update style sets

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -9133,6 +9133,7 @@ number-sign = "slanted"
 at = "fourfold"
 percent = "rings-continuous-slash"
 pilcrow = "low"
+partial-derivative = "closed-contour"
 micro-sign = "toothed-serifless"
 
 [composite.ss01.slab-override.design]
@@ -9341,6 +9342,7 @@ cent = "slanted-through-cap"
 percent = "rings-continuous-slash"
 pilcrow = "curved"
 question = "corner-flat-hooked"
+partial-derivative = "closed-contour"
 micro-sign = "tailed-serifless"
 
 [composite.ss03.italic]
@@ -9476,6 +9478,7 @@ ampersand = "upper-open"
 at = "threefold"
 percent = "rings-continuous-slash"
 bar = "force-upright"
+partial-derivative = "closed-contour"
 micro-sign = "tailed-serifless"
 
 [composite.ss04.slab-override.design]
@@ -9683,6 +9686,7 @@ cent = "open-cap"
 percent = "rings-continuous-slash"
 bar = "force-upright"
 pilcrow = "low"
+partial-derivative = "closed-contour"
 micro-sign = "toothed-serifless"
 
 [composite.ss06.slab-override.design]
@@ -9865,6 +9869,7 @@ capital-lambda = "curly-serifless"
 lower-lambda = "curly-tailed-turn"
 lower-mu = "toothed-serifless"
 lower-chi = "semi-chancery-curly-serifless"
+lower-theta = "diamond"
 cyrl-a = "double-storey-serifless"
 cyrl-capital-zhe = "curly"
 cyrl-zhe = "curly"
@@ -9893,6 +9898,7 @@ at = "threefold"
 dollar = "open"
 cent = "open"
 percent = "dots"
+partial-derivative = "closed-contour"
 micro-sign = "toothed-serifless"
 lig-ltgteq = "slanted"
 lig-neq = "slightly-slanted-dotted"
@@ -10013,6 +10019,7 @@ dollar = "open"
 cent = "through-cap"
 percent = "rings-segmented-slash"
 bar = "force-upright"
+partial-derivative = "closed-contour"
 micro-sign = "tailed-serifless"
 
 [composite.ss09.italic]
@@ -10275,6 +10282,7 @@ dollar = "open"
 cent = "open"
 percent = "rings-continuous-slash"
 pilcrow = "low"
+partial-derivative = "closed-contour"
 micro-sign = "toothless-corner-serifless"
 
 [composite.ss12.italic]
@@ -10400,6 +10408,7 @@ at = "threefold"
 cent = "through-cap"
 percent = "rings-continuous-slash"
 pilcrow = "low"
+partial-derivative = "closed-contour"
 micro-sign = "toothed-serifless"
 
 [composite.ss13.slab-override.design]
@@ -10474,6 +10483,7 @@ lower-alpha = "barred"
 lower-gamma = "straight"
 lower-delta = "flat-top"
 lower-iota = "serifed-flat-tailed"
+lower-theta = "capsule"
 lower-lambda = "straight"
 lower-mu = "toothed-serifless"
 lower-nu = "straight"
@@ -11025,6 +11035,7 @@ long-s = "bent-hook-middle-serifed-xh"
 eszet = "longs-s-lig-serifless"
 lower-alpha = "barred-tailed"
 lower-gamma = "straight"
+lower-theta = "capsule"
 lower-lambda = "straight-turn"
 lower-tau = "short-tailed"
 lower-upsilon = "straight-serifless"
