Theta and Partial Derivative variants (#2630, #2148) (#2687)
* cleanup

* add variants

* doc

* remove nonbreakingtags

* update style sets

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -5595,7 +5595,6 @@ selectorAffix."grek/alpha/sansSerif" = "tailed"
 [prime.lower-beta]
 sampler = "β"
 samplerExplain = "Greek lower Beta"
-nonBreakingTagForNewVariantSelector = "VXAC" # REMOVE IN NEXT MAJOR VERSION CHANGE
 tagKind = "letter"
 
 [prime.lower-beta.variants.standard]
@@ -5668,7 +5667,6 @@ selector."cyrl/enghe/ghePart" = "topRightSerifed"
 [prime.lower-gamma]
 sampler = "γ"
 samplerExplain = "Greek lower Gamma"
-nonBreakingTagForNewVariantSelector = "VXAD" # REMOVE IN NEXT MAJOR VERSION CHANGE
 tagKind = "letter"
 
 [prime.lower-gamma.variants.straight]
@@ -5719,6 +5717,28 @@ selector."grek/delta" = "rounded"
 rank = 2
 description = "Greek lower Delta (`δ`) with flat top"
 selector."grek/delta" = "flatTop"
+
+
+
+[prime.lower-theta]
+sampler = "θ"
+samplerExplain = "Greek lower Theta"
+tagKind = "letter"
+
+[prime.lower-theta.variants.capsule]
+rank = 1
+description = "Greek lower Theta (`θ`) with a capsule (O-like) body shape"
+selector."grek/theta" = "capsule"
+
+[prime.lower-theta.variants.oval]
+rank = 2
+description = "Greek lower Theta (`θ`) with a standard (oval) body shape"
+selector."grek/theta" = "oval"
+
+[prime.lower-theta.variants.diamond]
+rank = 3
+description = "Greek lower Theta (`θ`) with a diamond body shape"
+selector."grek/theta" = "diamond"
 
 
 
@@ -5980,7 +6000,6 @@ selectorAffix."grek/mu/sansSerif" = "serifless"
 [prime.lower-nu]
 sampler = "ν"
 samplerExplain = "Greek lower Nu"
-nonBreakingTagForNewVariantSelector = "VXAE" # REMOVE IN NEXT MAJOR VERSION CHANGE
 tagKind = "letter"
 
 [prime.lower-nu.variants.straight]
@@ -6085,7 +6104,6 @@ selector."grek/tau/tailed" = "tau/semiTailed"
 [prime.lower-upsilon]
 sampler = "υ"
 samplerExplain = "Greek lower Upsilon"
-nonBreakingTagForNewVariantSelector = "VXAF" # REMOVE IN NEXT MAJOR VERSION CHANGE
 tagKind = "letter"
 
 [prime.lower-upsilon.variants-buildup]
@@ -6125,7 +6143,6 @@ selectorAffix."grek/upsilon/sansSerif" = "serifless"
 [prime.lower-phi]
 sampler = "φ"
 samplerExplain = "Greek lower Phi"
-nonBreakingTagForNewVariantSelector = "VXAG" # REMOVE IN NEXT MAJOR VERSION CHANGE
 tagKind = "letter"
 
 [prime.lower-phi.variants.straight]
@@ -6230,7 +6247,6 @@ selectorAffix."grek/chi/sansSerif" = "serifless"
 [prime.lower-psi]
 sampler = "ψ"
 samplerExplain = "Greek lower Psi"
-nonBreakingTagForNewVariantSelector = "VXAH" # REMOVE IN NEXT MAJOR VERSION CHANGE
 tagKind = "letter"
 
 [prime.lower-psi.variants-buildup]
@@ -6921,7 +6937,6 @@ selectorAffix."cyrl/em" = "smallCyrl"
 [prime.cyrl-capital-en]
 sampler = "Н"
 samplerExplain = "Cyrillic Capital En"
-nonBreakingTagForNewVariantSelector = "VXAA" # REMOVE IN NEXT MAJOR VERSION CHANGE
 tagKind = "letter"
 
 [prime.cyrl-capital-en.variants.serifless]
@@ -7041,7 +7056,6 @@ selectorAffix."cyrl/njeKomi" = "serifedExceptBottomRight"
 [prime.cyrl-capital-er]
 sampler = "Р"
 samplerExplain = "Cyrillic Capital Er"
-nonBreakingTagForNewVariantSelector = "VXAB" # REMOVE IN NEXT MAJOR VERSION CHANGE
 tagKind = "letter"
 
 [prime.cyrl-capital-er.variants-buildup]
@@ -8490,6 +8504,11 @@ rank = 2
 description = "The upper bar of the partial derivative symbol is curly"
 selector."partial" = "curly-bar"
 
+[prime.partial-derivative.variants.closed-contour]
+rank = 3
+description = "The upper part of the partial derivative symbol is a full hook"
+selector."partial" = "closed-contour"
+
 
 
 [prime.micro-sign]
@@ -8821,6 +8840,7 @@ capital-gamma = "serifless"
 lower-gamma = "casual"
 capital-delta = "straight"
 lower-delta = "rounded"
+lower-theta = "oval"
 lower-iota = "serifed-semi-tailed"
 capital-lambda = "straight-serifless"
 lower-lambda = "straight"
@@ -9113,6 +9133,7 @@ number-sign = "slanted"
 at = "fourfold"
 percent = "rings-continuous-slash"
 pilcrow = "low"
+partial-derivative = "closed-contour"
 micro-sign = "toothed-serifless"
 
 [composite.ss01.slab-override.design]
@@ -9321,6 +9342,7 @@ cent = "slanted-through-cap"
 percent = "rings-continuous-slash"
 pilcrow = "curved"
 question = "corner-flat-hooked"
+partial-derivative = "closed-contour"
 micro-sign = "tailed-serifless"
 
 [composite.ss03.italic]
@@ -9456,6 +9478,7 @@ ampersand = "upper-open"
 at = "threefold"
 percent = "rings-continuous-slash"
 bar = "force-upright"
+partial-derivative = "closed-contour"
 micro-sign = "tailed-serifless"
 
 [composite.ss04.slab-override.design]
@@ -9663,6 +9686,7 @@ cent = "open-cap"
 percent = "rings-continuous-slash"
 bar = "force-upright"
 pilcrow = "low"
+partial-derivative = "closed-contour"
 micro-sign = "toothed-serifless"
 
 [composite.ss06.slab-override.design]
@@ -9845,6 +9869,7 @@ capital-lambda = "curly-serifless"
 lower-lambda = "curly-tailed-turn"
 lower-mu = "toothed-serifless"
 lower-chi = "semi-chancery-curly-serifless"
+lower-theta = "diamond"
 cyrl-a = "double-storey-serifless"
 cyrl-capital-zhe = "curly"
 cyrl-zhe = "curly"
@@ -9873,6 +9898,7 @@ at = "threefold"
 dollar = "open"
 cent = "open"
 percent = "dots"
+partial-derivative = "closed-contour"
 micro-sign = "toothed-serifless"
 lig-ltgteq = "slanted"
 lig-neq = "slightly-slanted-dotted"
@@ -9993,6 +10019,7 @@ dollar = "open"
 cent = "through-cap"
 percent = "rings-segmented-slash"
 bar = "force-upright"
+partial-derivative = "closed-contour"
 micro-sign = "tailed-serifless"
 
 [composite.ss09.italic]
@@ -10255,6 +10282,7 @@ dollar = "open"
 cent = "open"
 percent = "rings-continuous-slash"
 pilcrow = "low"
+partial-derivative = "closed-contour"
 micro-sign = "toothless-corner-serifless"
 
 [composite.ss12.italic]
@@ -10380,6 +10408,7 @@ at = "threefold"
 cent = "through-cap"
 percent = "rings-continuous-slash"
 pilcrow = "low"
+partial-derivative = "closed-contour"
 micro-sign = "toothed-serifless"
 
 [composite.ss13.slab-override.design]
@@ -10454,6 +10483,7 @@ lower-alpha = "barred"
 lower-gamma = "straight"
 lower-delta = "flat-top"
 lower-iota = "serifed-flat-tailed"
+lower-theta = "capsule"
 lower-lambda = "straight"
 lower-mu = "toothed-serifless"
 lower-nu = "straight"
@@ -11005,6 +11035,7 @@ long-s = "bent-hook-middle-serifed-xh"
 eszet = "longs-s-lig-serifless"
 lower-alpha = "barred-tailed"
 lower-gamma = "straight"
+lower-theta = "capsule"
 lower-lambda = "straight-turn"
 lower-tau = "short-tailed"
 lower-upsilon = "straight-serifless"
