Add almost-flat-top variant for `W` and `w` (#2693).

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1794,52 +1794,69 @@ next = "serifs"
 
 [prime.capital-w.variants-buildup.stages.body.straight]
 rank = 1
+groupRank = 1
 descriptionAffix = "standard, straight body"
 selectorAffix.W = "straight"
 selectorAffix."W/sansSerif" = "straight"
 selectorAffix.WHookTop = "straight"
 
-[prime.capital-w.variants-buildup.stages.body.curly]
+[prime.capital-w.variants-buildup.stages.body.straight-almost-flat-top]
 rank = 2
-descriptionAffix = "curly body"
-selectorAffix.W = "curly"
-selectorAffix."W/sansSerif" = "curly"
-selectorAffix.WHookTop = "curly"
-
-[prime.capital-w.variants-buildup.stages.body.straight-vertical-sides]
-rank = 3
-descriptionAffix = "straight body shape with vertical sides"
-selectorAffix.W = "straightVerticalSides"
-selectorAffix."W/sansSerif" = "straightVerticalSides"
-selectorAffix.WHookTop = "straightVerticalSides"
-
-[prime.capital-w.variants-buildup.stages.body.rounded-vertical-sides]
-rank = 4
-descriptionAffix = "rounded body shape with vertical sides"
-selectorAffix.W = "roundedVerticalSides"
-selectorAffix."W/sansSerif" = "roundedVerticalSides"
-selectorAffix.WHookTop = "roundedVerticalSides"
+groupRank = 1
+descriptionAffix = "straight body shape that the middle is forced to be aligned the top"
+selectorAffix.W = "straightAlmostFlatTop"
+selectorAffix."W/sansSerif" = "straightAlmostFlatTop"
+selectorAffix.WHookTop = "straightAlmostFlatTop"
 
 [prime.capital-w.variants-buildup.stages.body.straight-flat-top]
-rank = 5
+rank = 3
+groupRank = 1
 descriptionAffix = "straight body shape that the middle is forced to be aligned the top"
 selectorAffix.W = "straightFlatTop"
 selectorAffix."W/sansSerif" = "straightFlatTop"
 selectorAffix.WHookTop = "straightFlatTop"
 
 [prime.capital-w.variants-buildup.stages.body.straight-double-v]
-rank = 6
+rank = 4
+groupRank = 2
 descriptionAffix = "body shape like double V"
 selectorAffix.W = "straightDoubleV"
 selectorAffix."W/sansSerif" = "straightDoubleV"
 selectorAffix.WHookTop = "straightDoubleV"
 
 [prime.capital-w.variants-buildup.stages.body.straight-asymmetric]
-rank = 7
+rank = 5
+groupRank = 2
 descriptionAffix = "asymmetric shape"
 selectorAffix.W = "straightAsymmetric"
 selectorAffix."W/sansSerif" = "straightAsymmetric"
 selectorAffix.WHookTop = "straightAsymmetric"
+
+
+[prime.capital-w.variants-buildup.stages.body.straight-vertical-sides]
+rank = 6
+groupRank = 3
+descriptionAffix = "straight body shape with vertical sides"
+selectorAffix.W = "straightVerticalSides"
+selectorAffix."W/sansSerif" = "straightVerticalSides"
+selectorAffix.WHookTop = "straightVerticalSides"
+
+[prime.capital-w.variants-buildup.stages.body.rounded-vertical-sides]
+rank = 7
+groupRank = 3
+descriptionAffix = "rounded body shape with vertical sides"
+selectorAffix.W = "roundedVerticalSides"
+selectorAffix."W/sansSerif" = "roundedVerticalSides"
+selectorAffix.WHookTop = "roundedVerticalSides"
+
+[prime.capital-w.variants-buildup.stages.body.curly]
+rank = 8
+groupRank = 3
+descriptionAffix = "curly body"
+selectorAffix.W = "curly"
+selectorAffix."W/sansSerif" = "curly"
+selectorAffix.WHookTop = "curly"
+
 
 [prime.capital-w.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -4719,40 +4736,24 @@ selectorAffix.w = "straight"
 selectorAffix."w/sansSerif" = "straight"
 selectorAffix.wHookTop = "straight"
 
-[prime.w.variants-buildup.stages.body.curly]
+[prime.w.variants-buildup.stages.body.straight-almost-flat-top]
 rank = 2
 groupRank = 1
-descriptionAffix = "curly body"
-selectorAffix.w = "curly"
-selectorAffix."w/sansSerif" = "curly"
-selectorAffix.wHookTop = "curly"
-
-[prime.w.variants-buildup.stages.body.straight-vertical-sides]
-rank = 3
-groupRank = 1
-descriptionAffix = "straight body shape with vertical sides"
-selectorAffix.w = "straightVerticalSides"
-selectorAffix."w/sansSerif" = "straightVerticalSides"
-selectorAffix.wHookTop = "straightVerticalSides"
-
-[prime.w.variants-buildup.stages.body.rounded-vertical-sides]
-rank = 4
-groupRank = 1
-descriptionAffix = "rounded body shape with vertical sides"
-selectorAffix.w = "roundedVerticalSides"
-selectorAffix."w/sansSerif" = "roundedVerticalSides"
-selectorAffix.wHookTop = "roundedVerticalSides"
+descriptionAffix = "straight body shape that the middle is forced to be aligned the top"
+selectorAffix.w = "straightAlmostFlatTop"
+selectorAffix."w/sansSerif" = "straightAlmostFlatTop"
+selectorAffix.wHookTop = "straightAlmostFlatTop"
 
 [prime.w.variants-buildup.stages.body.straight-flat-top]
-rank = 5
-groupRank = 2
+rank = 3
+groupRank = 1
 descriptionAffix = "straight body shape that the middle is forced to be aligned the top"
 selectorAffix.w = "straightFlatTop"
 selectorAffix."w/sansSerif" = "straightFlatTop"
 selectorAffix.wHookTop = "straightFlatTop"
 
 [prime.w.variants-buildup.stages.body.straight-double-v]
-rank = 6
+rank = 4
 groupRank = 2
 descriptionAffix = "body shape like double V"
 selectorAffix.w = "straightDoubleV"
@@ -4760,20 +4761,45 @@ selectorAffix."w/sansSerif" = "straightDoubleV"
 selectorAffix.wHookTop = "straightDoubleV"
 
 [prime.w.variants-buildup.stages.body.straight-asymmetric]
-rank = 7
+rank = 5
 groupRank = 2
 descriptionAffix = "asymmetric shape"
 selectorAffix.w = "straightAsymmetric"
 selectorAffix."w/sansSerif" = "straightAsymmetric"
 selectorAffix.wHookTop = "straightAsymmetric"
 
-[prime.w.variants-buildup.stages.body.cursive]
-rank = 8
+[prime.w.variants-buildup.stages.body.straight-vertical-sides]
+rank = 6
 groupRank = 3
+descriptionAffix = "straight body shape with vertical sides"
+selectorAffix.w = "straightVerticalSides"
+selectorAffix."w/sansSerif" = "straightVerticalSides"
+selectorAffix.wHookTop = "straightVerticalSides"
+
+[prime.w.variants-buildup.stages.body.rounded-vertical-sides]
+rank = 7
+groupRank = 3
+descriptionAffix = "rounded body shape with vertical sides"
+selectorAffix.w = "roundedVerticalSides"
+selectorAffix."w/sansSerif" = "roundedVerticalSides"
+selectorAffix.wHookTop = "roundedVerticalSides"
+
+[prime.w.variants-buildup.stages.body.curly]
+rank = 8
+groupRank = 4
+descriptionAffix = "curly body"
+selectorAffix.w = "curly"
+selectorAffix."w/sansSerif" = "curly"
+selectorAffix.wHookTop = "curly"
+
+[prime.w.variants-buildup.stages.body.cursive]
+rank = 9
+groupRank = 4
 descriptionAffix = "cursive shape"
 selectorAffix.w = "cursive"
 selectorAffix."w/sansSerif" = "cursive"
 selectorAffix.wHookTop = "cursive"
+
 
 [prime.w.variants-buildup.stages.serifs.serifless]
 rank = 1
